--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,38 +39,14 @@
                     <i class="material-icons">menu</i>
                 </a>
                 <ul class="left hide-on-med-and-down">
-                    <li>
-                        <a href="<%=root_path %>">
-                            <i class="material-icons left">view_list</i>List
-                        </a>
-                    </li>
-                    <li>
-                        <a href="<%= pages_about_path %>">
-                            <i class="material-icons left">perm_identity</i>About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="<%= pages_contact_path %>">
-                            <i class="material-icons left">room</i>Contact
-                        </a>
-                    </li>
+                    <li><a href="<%= root_path %>"><i class="material-icons left">view_list</i>List</a></li>
+                    <li><a href="<%= pages_about_path %>"><i class="material-icons left">perm_identity</i>About</a></li>
+                    <li><a href="<%= pages_contact_path %>"><i class="material-icons left">room</i>Contact</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                    <li>
-                        <a href="<%=root_path %>">
-                            <i class="material-icons left">view_list</i>List
-                        </a>
-                    </li>
-                    <li>
-                        <a href="<%= pages_about_path %>">
-                            <i class="material-icons left">perm_identity</i>About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="<%= pages_contact_path %>">
-                            <i class="material-icons left">room</i>Contact
-                        </a>
-                    </li>
+                    <li><a href="<%=root_path %>"><i class="material-icons left">view_list</i>List</a></li>
+                    <li><a href="<%= pages_about_path %>"><i class="material-icons left">perm_identity</i>About</a></li>
+                    <li><a href="<%= pages_contact_path %>"><i class="material-icons left">room</i>Contact</a></li>
                 </ul>
             </div>
         </nav>
