--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="input-field">
-    <%= f.text_field :language, :placeholder => 'Link', :length => '20' %>
+    <%= f.text_field :language, :placeholder => 'Youtube link after watch', :length => '100' %>
   </div>
   <div class="input-field">
     <%= f.text_field :title, :placeholder => 'Title', :length => '30' %>
