--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -14,7 +14,7 @@
             <div class="card-image">
                 <div class="videoWrapper">
                     <!-- Copy & Pasted from YouTube -->
-                    <iframe width="560" height="349" src="https://www.youtube.com/embed/<%= @lesson.language %>" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="349" src="http://www.youtube.com/embed/<%= @lesson.language %>" frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
